syntax = "proto2";

import public "Login.proto";

message PlayerFrame {
    message Vec3 {
        required float x = 1;
        required float y = 2;
        required float z = 3;
    }

    message Quat {
        required float x = 1;
        required float y = 2;
        required float z = 3;
        required float w = 4;
    }

    message KartBoost {
        repeated int32 timesBeforeEnd  = 1;
        required int32 types           = 2;
        required float boostMultiplyer = 3;
        required float boostAcceleration = 4;
        required float unk_1c = 5;
        required float boostSpeedLimit = 6;
    }

    message WheelPhysics {
        required Vec3 realPos = 1;
        required Vec3 lastPos = 2;
        required Vec3 lastPosDiff = 3;
    }

    required Vec3  pos = 1;
    required Vec3  externalVel = 2;
    required Vec3  internalVel = 3;
    required bool  inBullet = 4;
    required Quat  mainRot = 5;
    required float internalSpeed = 6;

    required KartBoost boostState = 7;
    repeated WheelPhysics wheelPhysics = 8;
}

message RoomRequest {
    message Join {
        repeated bytes     miis            = 1;
        required uint32    location        = 2;
        required uint32    latitude        = 3;
        required uint32    longitude       = 4;
        required uint32    regionLineColor = 5;
        repeated uint32    settings        = 6;
        optional LoginInfo login_info      = 7;
    }

    message Spectate {}

    message Comment {
        required uint32 messageId = 1;
    }

    message Settings {
        repeated uint32 settings = 1;
    }

    message Start {
        required uint32 gamemode = 1;
    }

    message TeamSelect {
        required uint32 playerId = 1;
        required uint32 teamId   = 2;
    }

    message Properties {
        required uint32 character = 1;
        required uint32 vehicle   = 2;
        required bool   driftType = 3;
    }

    message Vote {
        required uint32     course     = 1;
        required Properties properties = 2;
    }

    message Race {
        required uint32      time       = 1;
        required uint32      serverTime = 2;
        repeated PlayerFrame players    = 3;
    }

    oneof request {
        Join       join       = 1;
        Spectate   spectate   = 2;
        Comment    comment    = 3;
        Settings   settings   = 4;
        Start      start      = 5;
        TeamSelect teamSelect = 6;
        Vote       vote       = 7;
        Race       race       = 8;
    }
}

message RoomEvent {
    message Join {
        required bytes  mii             = 1;
        required uint32 location        = 2;
        required uint32 latitude        = 3;
        required uint32 longitude       = 4;
        required uint32 regionLineColor = 5;
    }

    message Leave {
        required uint32 playerId = 1;
    }

    message Spectate {
        required uint32 count = 1;
    }

    message Settings {
        repeated uint32 settings = 1;
    }

    message Comment {
        required uint32 playerId  = 1;
        required uint32 messageId = 2;
    }

    message Start {
        required uint32 gamemode = 1;
    }

    message TeamSelect {
        required uint32 playerId = 1;
        required uint32 teamId   = 2;
    }

    message SelectPulse {
        required uint32 playerId = 1;
    }

    message Properties {
        required uint32 character = 1;
        required uint32 vehicle   = 2;
        required bool   driftType = 3;
        required uint32 course    = 4;
    }

    message SelectInfo {
        repeated Properties playerProperties = 1;
        required uint32     selectedPlayer   = 2;
    }

    oneof event {
        Join        join        = 1;
        Leave       leave       = 2;
        Spectate    spectate    = 3;
        Comment     comment     = 4;
        Settings    settings    = 5;
        Start       start       = 6;
        TeamSelect  teamSelect  = 7;
        SelectPulse selectPulse = 8;
        SelectInfo  selectInfo  = 9;
    }
}

message RaceClientPing {}

message RaceServerFrame {
    required uint32      time        = 1;
    repeated uint32      playerTimes = 2;
    repeated PlayerFrame players     = 3;
}
